sfml/DSFML/import/dsfml/audio/external.d

        
        sfMusic* sfMusic_CreateFromFile(char *);
        sfMusic* sfMusic_CreateFromMemory(byte *, size_t);
        void sfMusic_Destroy(sfMusic*);
        void sfMusic_SetLoop(sfMusic*, int);
        bool sfMusic_GetLoop(sfMusic*);
        float sfMusic_GetDuration(sfMusic*);
        void sfMusic_Play(sfMusic*);
        void sfMusic_Pause(sfMusic*);
        void sfMusic_Stop(sfMusic*);
        uint sfMusic_GetChannelsCount(sfMusic*);
        uint sfMusic_GetSampleRate(sfMusic*);
        SoundStatus sfMusic_GetStatus(sfMusic*);
        void sfMusic_SetPitch(sfMusic *Music, float);
        void sfMusic_SetVolume(sfMusic *Music, float);
        void sfMusic_SetPosition(sfMusic *Music, float, float, float);
        float sfMusic_GetPitch(sfMusic*);
        float sfMusic_GetVolume(sfMusic*);
        void sfMusic_GetPosition(sfMusic*, float*, float*, float*);
        float sfMusic_GetMinDistance(sfMusic*);
        float sfMusic_GetAttenuation(sfMusic*);
        void sfMusic_SetMinDistance(sfMusic*, float);
        void sfMusic_SetAttenuation(sfMusic*, float);

    
        //soundbuffer.d
        struct sfSoundBuffer {};
        
        sfSoundBuffer* sfSoundBuffer_CreateFromFile(char *);
        sfSoundBuffer* sfSoundBuffer_CreateFromMemory(byte*, size_t);
        sfSoundBuffer* sfSoundBuffer_CreateFromSamples(short*, size_t, uint, uint);
        void sfSoundBuffer_Destroy(sfSoundBuffer*);
        bool sfSoundBuffer_SaveToFile(sfSoundBuffer*, char*);
        short* sfSoundBuffer_GetSamples(sfSoundBuffer*);
        size_t sfSoundBuffer_GetSamplesCount(sfSoundBuffer*);
        uint sfSoundBuffer_GetSampleRate(sfSoundBuffer*);
        uint sfSoundBuffer_GetChannelsCount(sfSoundBuffer*);
        float sfSoundBuffer_GetDuration(sfSoundBuffer*);
    
        //soundbufferrecorder.d
        struct sfSoundBufferRecorder {};
        
        sfSoundBufferRecorder* sfSoundBufferRecorder_Create();
        void sfSoundBufferRecorder_Destroy(sfSoundBufferRecorder*);
        void sfSoundBufferRecorder_Start(sfSoundBufferRecorder*, uint);
        void sfSoundBufferRecorder_Stop(sfSoundBufferRecorder*);
        uint sfSoundBufferRecorder_GetSampleRate(sfSoundBufferRecorder*);
        sfSoundBuffer* sfSoundBufferRecorder_GetBuffer(sfSoundBufferRecorder*);
        
        //soundrecorder.d
        struct sfSoundRecorder {};
        
        sfSoundRecorder* sfSoundRecorder_Create(int function(short*, size_t, void*), void*);
        void sfSoundRecorder_Destroy(sfSoundRecorder*);
        void sfSoundRecorder_Start(sfSoundRecorder*, uint SampleRate);
        void sfSoundRecorder_Stop(sfSoundRecorder*);
        uint sfSoundRecorder_GetSampleRate(sfSoundRecorder*);
        bool sfSoundRecorder_CanCapture();
        
        //sound.d
        struct sfSound{} ;
        
        sfSound* sfSound_Create();
        void sfSound_Destroy(sfSound*);
        void sfSound_Play(sfSound*);
        void sfSound_Pause(sfSound*);
        void sfSound_Stop(sfSound*);
        void sfSound_SetBuffer(sfSound*, sfSoundBuffer*);
        sfSoundBuffer* sfSound_GetBuffer(sfSound*);
        void sfSound_SetLoop(sfSound*, int);
        bool sfSound_GetLoop(sfSound*);
        SoundStatus sfSound_GetStatus(sfSound*);
        void sfSound_SetPitch(sfSound*, float);
        void sfSound_SetVolume(sfSound*, float);
        void sfSound_SetPosition(sfSound*, float, float, float);
        float sfSound_GetPitch(sfSound*);
        float sfSound_GetVolume(sfSound*);
        void sfSound_GetPosition(sfSound*, float*, float*, float*);
        float sfSound_GetPlayingOffset(sfSound*);
        float sfSound_GetMinDistance(sfSound*);
        float sfSound_GetAttenuation(sfSound*);
        void sfSound_SetMinDistance(sfSound*, float);
        void sfSound_SetAttenuation(sfSound*, float);

    
    }
}
